<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_name_text"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/default_app_text_size"
        android:textStyle="bold"


        />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_input_name_hint"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/input_name_margin_top"
        android:gravity="center"
        android:paddingBottom="@dimen/input_name_padding_bottom"



    />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text= "@string/button_text"
        android:layout_margin_top="20dp"

        />


    <FrameLayout
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="250dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="@dimen/input_name_margin_top">

        <TextView

            android:id="@+id/resultname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/input_name_margin_top"
            android:textSize="@dimen/default_app_text_size"


            />

    <TextView

        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_tekstas"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/input_name_margin_top2"
        android:textSize="@dimen/name_text_size"

        />


    >





</FrameLayout>


    <TextView


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/input_name_margin_top"


        />


</LinearLayout>